[tool.poetry]
name = "pyynab"
version = "0.10.0"
description = ""
authors = ["Matthieu Berthomé <cheery.iron6016@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
certifi = ">=14.05.14"
six = ">=1.10"
python-dateutil = ">=2.5.3"
urllib3 = "*"

[tool.poetry.dev-dependencies]
pyyaml = "*"
twine = "*"
coveralls = "*"
setuptools_scm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
